deploy/base/istio/istiod/deployment.istiod.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istiod
spec:
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "false"
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: istiod
      containers:
        - name: discovery
          image: "istio/pilot:1.12.1"
          args:
            - "discovery"
            - --monitoringAddr=:15014
            - --log_output_level=default:info
            - --domain
            - cluster.local
            - --keepaliveMaxServerConnectionAge
            - "30m"
          ports:
            - protocol: TCP
              containerPort: 8080
            - protocol: TCP
              containerPort: 15010
            - protocol: TCP
              containerPort: 15017
          resources:
            requests:
              cpu: 500m
              memory: 2048Mi
          volumeMounts:
            - name: istio-token
              readOnly: true
              mountPath: /var/run/secrets/tokens
            - name: local-certs
              mountPath: /var/run/secrets/istio-dns
            - name: cacerts
              readOnly: true
              mountPath: /etc/cacerts
            - name: istio-kubeconfig
              readOnly: true
              mountPath: /var/run/secrets/remote
          readinessProbe:
            httpGet:
              port: 8080
              path: /ready
            initialDelaySeconds: 1
            periodSeconds: 3
            timeoutSeconds: 5
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1337
            runAsNonRoot: true
            runAsUser: 1337
      volumes:
        # Technically not needed on this pod - but it helps debugging/testing SDS
        # Should be removed after everything works.
        - name: local-certs
          emptyDir:
            medium: Memory
        - name: istio-token
          projected:
            sources:
              - serviceAccountToken:
                  audience: istio-ca
                  expirationSeconds: 43200
                  path: istio-token
        # Optional: user-generated root
        - name: cacerts
          secret:
            optional: true
            secretName: cacerts
        - name: istio-kubeconfig
          secret:
            optional: true
            secretName: istio-kubeconfig
      securityContext:
        fsGroup: 1337
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
