deploy/base/istio/istiod/service.istiod.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: istiod
spec:
  ports:
    - name: grpc-xds # plaintext
      protocol: TCP
      port: 15010
    - name: https-dns # mTLS with k8s-signed cert
      protocol: TCP
      port: 15012
    - name: https-webhook # validation and injection
      protocol: TCP
      port: 443
      targetPort: 15017
    - name: http-monitoring # prometheus stats
      protocol: TCP
      port: 15014
